    "<prefix>rgl" of class "rglClass" that allows access to many of the
    scene internals.  (Inspired by patch submitted by Jeff Allen.)
  - User mouse callbacks can now be retrieved within R using
    rgl.getMouseCallbacks() and rgl.getWheelCallback(), and 
    may be included in WebGL output.
  - writeWebGL() now outputs information on object ids to allow
    them to be re-used in multiple figures on the same page.
    See the "reuse" parameter and attribute of the result.
  - Started a vignette describing user interaction in WebGL.
  - Set the class of the main "canvas" element in 
    writeWebGL() output to "rglWebGL". 
  - rgl.snapshot() now evaluates the "top" argument after "filename"
    and "fmt", so windows created when those are evaluated don't
    overlay the rgl window.  (Suggestion of Keith Jewell.)
  - Added subsetSlider(), subsetSetter(), clipplaneSlider(), 
    propertySlider(), ageSetter(), propertySetter(), par3dinterpSetter() and 
    toggleButton() functions to output HTML/Javascript controls for WebGL.
  - Fixed bug in abclines3d() that caused it to skip lines that passed
    through the corners of the bounding box.  (Reported by Sven Laur.)
  - Added hook_rgl() and hook_webgl() functions, based on the knitr
    functions. 
    
0.95.1253
  - Made error and warning text more consistent.
  - Automatically installs "rgl" and "webgl" hooks if
    knitr is loaded and they are not already present.
  - Dropped chunk option "rgl.keepopen"; replaced it
    with "rgl.newwindow". 
  - Added matrixSetter() function to allow multiple controls to
    modify one matrix.
  - Added "accumulate" argument to the subset WebGL controls.
  - The "nticks" argument to bbox3d() was never used and has
    been removed.  Use "xlen", "ylen" or "zlen".  
  - Setting "xlen" etc. to zero in bbox3d or rgl.bbox() now
    (correctly) suppresses tick marks. (Reported by 
    Philipp Angerer.)
  - Dependencies and imports have been updated.